--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -49,7 +49,8 @@
     </div>
     <div class="row">
         <div id="cuantos" class="col s12 m6 s6 animated fadeInRight">
-            <h1>¿Cuántos clientes nuevos quieres hoy?</h1>
+            <h1>¿Cuántos clientes nuevos
+                <br> quieres hoy?</h1>
             <hr>
             <h2 style="color: white">Te presentamos el
                 <b>canal de ventas Nº1
@@ -105,18 +106,16 @@
                 </h1>
                 <h2 class="socialMedia">Nuestro sistema de
                     <b>inteligencia artificial</b> toma desiciones para reducir el costo por captar clientes nuevos y aumenta
-                    el retorno de inversión
-                    <div class="social-fa">
-                        <br>
-                        <div class="fa fa-facebook"></div>
-                        <div class="fa fa-google"></div>
-                        <div class="fa fa-instagram"></div>
-                        <div class="fa fa-linkedin"></div>
-                        <div class="fa fa-twitter"></div>
-                        <div class="fa fa-youtube"></div>
-                        <div class="fa fa-foursquare"></div>
-                        <div class="fa fa-envelope"></div>
-                    </div>
+                    el retorno de inversión.
+                    <br>
+                    <div class="fa fa-facebook"></div>
+                    <div class="fa fa-google"></div>
+                    <div class="fa fa-instagram"></div>
+                    <div class="fa fa-linkedin"></div>
+                    <div class="fa fa-twitter"></div>
+                    <div class="fa fa-youtube"></div>
+                    <div class="fa fa-foursquare"></div>
+                    <div class="fa fa-envelope"></div>
                 </h2>
             </div>
             <div id="thirdRight" class="col l5 m5 s12 invisible">
@@ -137,7 +136,7 @@
             <h1 style="color: white">
                 <b>Información a tiempo</b>
             </h1>
-            <h2 style="color: white">Ingresa desde nuestra App y evalúa en tiempo real
+            <h2 style="color: white">Ingresa desde nuestra plataforma y evalúa en tiempo real
                 <br>
                 <b>el desempeño de tu campaña.</b>
             </h2>
@@ -162,8 +161,9 @@
                 <h1 style="color: #3a4d57">
                     <b>Optimiza tu campaña</b>
                 </h1>
-                <h2>Evalúa tus prospectos y Koomkin logic se configura para
-                    <b>mandarte solamente prospectos que te sirvan.</b>
+                <h2>Evalúa tus clientes potenciales y Koomkin logic se configura para
+                    <br>
+                    <b>mandarte solamente clientes potenciales que te sirvan.</b>
                 </h2>
             </div>
             <img class="col l6 m6 s12" id="likes" src="app/assets/img/prospectos.gif" alt="">
@@ -243,7 +243,7 @@
                     <div id="un" class="carta">
                         <div class="mas">
                             <h3 style="color: white;">+ </h2>
-                            <h2 class="counter timer count-title count-number" data-to="8000" data-speed="1500"></h2>
+                                <h2 class="counter">8000</h2>
                         </div>
                         <h5>Clientes contentos</h5>
                     </div>
@@ -252,7 +252,7 @@
                     <div id="dos" class="carta">
                         <div class="mas">
                             <h3 style="color: white;">+ </h2>
-                            <h2 class="counter timer count-title count-number" data-to="50000" data-speed="1500"></h2>
+                                <h2 class="counter">50000</h2>
                         </div>
                         <h5>Impresiones en los principales canales digitales</h5>
                     </div>
@@ -261,16 +261,16 @@
                     <div id="tres" class="carta">
                         <div class="mas">
                             <h3 style="color: white;">+ </h2>
-                            <h2 class="counter timer count-title count-number" data-to="11000" data-speed="1500"></h2>
+                                <h2 class="counter">11000</h2>
                         </div>
-                        <h5>Prospectos mensuales para nuestros clientes</h5>
+                        <h5>Clientes potenciales mensuales para nuestros clientes</h5>
                     </div>
                 </div>
                 <div class="col l3 m3 s12">
                     <div id="cuatro" class="carta">
                         <div class="mas">
                             <h3 style="color: white;">+ </h2>
-                            <h2 class="counter timer count-title count-number" data-to="16000" data-speed="1500"></h2>
+                                <h2 class="counter">16000</h2>
                         </div>
                         <h5>Reacciones en redes sociales</h5>
                     </div>
@@ -323,12 +323,10 @@
                         </form>
                     </div>
                 </div>
+                <p>Polanco, CDMX</p>
+                <b>contacto@koomkin.com</b>
+                <b>(55) 5535 - 0499</b>
             </div>
-            <p>Polanco, CDMX</p>
-            <br>
-            <b>contacto@koomkin.com</b>
-            <br>
-            <b>(55) 5535 - 0499</b>
             <div class="col l6 m6 s12">
             </div>
         </div>
