--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -71,7 +71,7 @@
 
 <div id="second" class="parallax-container valign-wrapper white-div">
     <div class="parallax">
-        <img class="socialBackground" src="app/assets/img/office.webp">
+        <img class="socialBackground" src="app/assets/img/office.jpg">
     </div>
     <div class="row">
         <div id="cinta" class="col l6 m6 s12">
@@ -127,7 +127,7 @@
 
 <div id="fourth" class="parallax-container valign-wrapper bluet-div">
     <div class="parallax">
-        <img class="socialBackground" src="app/assets/img/ipad.webp">
+        <img class="socialBackground" src="app/assets/img/ipad.jpg">
     </div>
     <div id="fElements" class="row">
         <div id="fourthLeft" class="col l5 m5 s12 invisible">
@@ -173,7 +173,7 @@
 
 <div id="team" class="parallax-container valign-wrapper vid2-div">
     <div class="parallax">
-        <img class="socialBackground" src="app/assets/img/vid2.webp">
+        <img class="socialBackground" src="app/assets/img/vid2.jpg">
     </div>
     <div class="container">
         <div class="row">
@@ -227,7 +227,7 @@
 </div>
 <div id="datos" class="parallax-container valign-wrapper bluem-div">
     <div class="parallax">
-        <img class="socialBackground" src="app/assets/img/city.webp">
+        <img class="socialBackground" src="app/assets/img/city.jpg">
     </div>
     <div class="container">
         <div class="row datosElements invisible">
@@ -243,7 +243,7 @@
                     <div id="un" class="carta">
                         <div class="mas">
                             <h3 style="color: white;">+ </h2>
-                                <h2 class="counter">8000</h2>
+                                <h2 class="counter">8,000</h2>
                         </div>
                         <h5>Clientes contentos</h5>
                     </div>
@@ -252,7 +252,7 @@
                     <div id="dos" class="carta">
                         <div class="mas">
                             <h3 style="color: white;">+ </h2>
-                                <h2 class="counter">50000</h2>
+                                <h2 class="counter">50,000</h2>
                         </div>
                         <h5>Impresiones en los principales canales digitales</h5>
                     </div>
@@ -261,7 +261,7 @@
                     <div id="tres" class="carta">
                         <div class="mas">
                             <h3 style="color: white;">+ </h2>
-                                <h2 class="counter">11000</h2>
+                                <h2 class="counter">11,000</h2>
                         </div>
                         <h5>Clientes potenciales mensuales para nuestros clientes</h5>
                     </div>
@@ -270,7 +270,7 @@
                     <div id="cuatro" class="carta">
                         <div class="mas">
                             <h3 style="color: white;">+ </h2>
-                                <h2 class="counter">16000</h2>
+                                <h2 class="counter">16,000</h2>
                         </div>
                         <h5>Reacciones en redes sociales</h5>
                     </div>
