--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -54,11 +54,12 @@
     </div>
     <div class="row">
         <div id="cuantos" class="col s12 m6 s6 animated fadeInRight">
+            <div class="graphicElement"></div>
             <h1 style="text-transform: inherit;">¿Cuántos clientes nuevos
                 <br> quieres hoy?</h1>
-            <hr>
+            <div class="graphicElement2" style="width: 36%"></div>
             <h2 style="color: white">Te presentamos el
-                <b>canal de ventas Nº1
+                <b>canal de Ventas Nº1
                     <br> para empresas en México.</b>
             </h2>
         </div>
@@ -87,14 +88,15 @@
             <img class="down2" src="app/assets/img/4.png" alt="">
         </div>
         <div id="negocios" class="col l6 m6 s12 invisible">
-            <div class="graphicElement" style="width: 105px;">
+            <div class="graphicElement">
             </div>
             <div class="secondElements">
-                <h1 style="color: #3a4d57;">
+                <h1 id="para">
                     <b>Para todas las empresas</b>
                 </h1>
-                <h2 class="thicker">Koomkin esta diseñado para ayudar a
-                    <b>cualquier tipo de empresa o negocio</b> a incrementar sus ventas, sin importar su giro o tamaño.
+                <div class="graphicElement2" style="width: 40%;"></div>
+                <h2 class="thicker">Koomkin está diseñado para ayudar a
+                    <b>cualquier tipo de empresa o negocio</b> a incrementar sus ventas; esto sin importar su giro o tamaño.
                 </h2>
             </div>
         </div>
@@ -105,16 +107,16 @@
     <div class="container">
         <div class="row">
             <div id="thirdLeft" class="col l7 m7 s12 invisible">
-                <div class="graphicElement" style="border-bottom: 12px solid white;">
+                <div class="graphicElement">
                 </div>
-                <h1>
+                <h1 id="unAlgoritmo">
                     <b>Un algoritmo inteligente</b>
                 </h1>
-                <div class="graphicElement" style="width: 68%;">
+                <div class="graphicElement2" style="width: 63%">
                 </div>
-                <h2 class="socialMedia">Nuestro sistema de
-                    <b>inteligencia artificial</b> toma desiciones para reducir el costo por captar clientes nuevos y aumenta
-                    el retorno de inversión.
+                <h2 class="socialMedia">Nuestra plataforma tecnológica maximiza la rentabilidad de tu inversión, seleccionando
+                    <b>el mejor canal digital</b>
+                    para captar clientes nuevos.
                     <br>
                     <div class="fa fa-facebook"></div>
                     <div class="fa fa-google"></div>
@@ -136,14 +138,16 @@
         <img class="socialBackground" src="app/assets/img/ipad.jpg">
     </div>
     <div id="fourthLeft" class="container invisible">
-        <div class="graphicElement" style="border-bottom: 12px solid white;">
+        <div class="graphicElement">
         </div>
         <h1 style="color: white">
-            <b>Información a tiempo</b>
+            <b>Información
+                <br> en tiempo real</b>
         </h1>
-        <h2 style="color: white">Ingresa desde nuestra plataforma y evalúa en tiempo real
-            <br>
-            <b>el desempeño de tu campaña.</b>
+        <div class="graphicElement2" style="width: 75%">
+        </div>
+        <h2 style="color: white">Ingresa a nuestra plataforma desde tu celular y
+            <b>evalúa el desempeño de tu campaña digital.</b>
         </h2>
     </div>
     <img class="invisible" id="app1" src="app/assets/img/app1.png" alt="">
@@ -163,9 +167,10 @@
                 <h1 style="color: #3a4d57">
                     <b>Optimiza tu campaña</b>
                 </h1>
-                <h2>Evalúa tus clientes potenciales y Koomkin logic se configura para
-                    <br>
-                    <b>mandarte solamente clientes potenciales que te sirvan.</b>
+                <div class="graphicElement2" style="width: 100%">
+                </div>
+                <h2>
+                    <b>Tú mismo vas guiando nuestro algoritmo</b> para que consiga el tipo de clientes que requiere tu empresa.</b>
                 </h2>
             </div>
             <div class="col l6 m6 s12">
@@ -189,8 +194,11 @@
                 <h1>
                     <b>Nuestro equipo</b>
                 </h1>
-                <h2 class="socialMedia">Contamos con más de 50 expertos para brindarte
-                    <b>las mejores herramientas digitales y el mejor servicio.</b>
+                <div class="graphicElement2" style="width: 65%">
+                </div>
+                <h2 class="socialMedia">
+                    <b>Contamos con más de 50 expertos en tecnología y mercadotecnia,</b> poniendo al alcance de tu mano las
+                    mejores herramientas digitales.
                 </h2>
                 <a id="equipo" class="btn-large modal-trigger" href="#modal1">Únete a nuestro equipo</a>
             </div>
@@ -220,7 +228,7 @@
                             <p>Adjunta tu CV aquí</p>
                             <input name="CV" type="file">
                         </div>
-                        <button id="enviar" class="waves-effect waves-light btn" type="submit" type="submit">Send</button>
+                        <button id="enviar" class="waves-effect waves-light btn" type="submit" type="submit">Enviar</button>
                         <br>
                     </form>
                 </div>
@@ -243,7 +251,7 @@
                     <div class="graphicElement" style="border-bottom: 12px solid white;">
                     </div>
                     <h1>
-                        <b>Datos divertidos</b>
+                        <b>Nuestros números crecen…</b>
                     </h1>
                 </div>
                 <div class="col l3 m3 s12">
@@ -252,16 +260,16 @@
                             <h3 style="color: white;">+ </h2>
                                 <h2 class="counter">8,000</h2>
                         </div>
-                        <h5>Clientes contentos</h5>
+                        <h5>Clientes contentos históricamente</h5>
                     </div>
                 </div>
                 <div class="col l3 m3 s12">
                     <div id="dos" class="carta">
                         <div class="mas">
                             <h3 style="color: white;">+ </h2>
-                                <h2 class="counter">50,000</h2>
+                                <h2 class="counter">500,000</h2>
                         </div>
-                        <h5>Impresiones en los principales canales digitales</h5>
+                        <h5>Personas impactadas por su publicidad diariamente</h5>
                     </div>
                 </div>
                 <div class="col l3 m3 s12">
@@ -270,16 +278,16 @@
                             <h3 style="color: white;">+ </h2>
                                 <h2 class="counter">11,000</h2>
                         </div>
-                        <h5>Clientes potenciales mensuales para nuestros clientes</h5>
+                        <h5>Oportunidades de venta generadas diariamente</h5>
                     </div>
                 </div>
                 <div class="col l3 m3 s12">
                     <div id="cuatro" class="carta">
                         <div class="mas">
                             <h3 style="color: white;">+ </h2>
-                                <h2 class="counter">16,000</h2>
+                                <h2 class="counter">1</h2>
                         </div>
-                        <h5>Reacciones en redes sociales</h5>
+                        <h5>Sólo una plataforma tecnológica</h5>
                     </div>
                 </div>
             </div>
@@ -296,7 +304,7 @@
         </h1>
         <div class="row">
             <div class="col l6 m6 s12">
-                <div class="card">
+                <!-- <div class="card">
                     <div class="card-content">
                         <form>
                             <h4 id="mensajeContacto">Nos pondremos en contacto contigo</h1>
@@ -304,14 +312,6 @@
                                     <div class="input-field">
                                         <input id="name" type="text" name="Nombre" class="validate" required>
                                         <label>Nombre</label>
-                                    </div>
-                                    <div class="input-field">
-                                        <input id="email" type="email" name="email" class="validate" required>
-                                        <label>Email</label>
-                                    </div>
-                                    <div class="input-field">
-                                        <input id="phone" type="number" min="7" name="phone" class="validate" required>
-                                        <label>Teléfono</label>
                                     </div>
                                     <div class="input-field">
                                         <input id="subject" type="text" name="Asunto" class="validate" required>
@@ -326,22 +326,82 @@
                                 <br>
                         </form>
                     </div>
+                </div> -->
+                <div class="container">
+                    <div class="frame">
+                        <div class="nav">
+                            <ul class "links">
+                                <li class="signin-active">
+                                    <a class="btn">Sign in</a>
+                                </li>
+                                <li class="signup-inactive">
+                                    <a class="btn">Sign up </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div ng-app ng-init="checked = false">
+                            <form class="form-signin" action="" method="post" name="form">
+                                <label for="username">Username</label>
+                                <input class="form-styling" type="text" name="username" placeholder="" />
+                                <label for="password">Password</label>
+                                <input class="form-styling" type="text" name="password" placeholder="" />
+                                <input type="checkbox" id="checkbox" />
+                                <label for="checkbox">
+                                    <span class="ui"></span>Keep me signed in</label>
+                                <div class="btn-animate">
+                                    <a class="btn-signin">Sign in</a>
+                                </div>
+                            </form>
+                            <form class="form-signup" action="" method="post" name="form">
+                                <label for="fullname">Full name</label>
+                                <input class="form-styling" type="text" name="fullname" placeholder="" />
+                                <label for="email">Email</label>
+                                <input class="form-styling" type="text" name="email" placeholder="" />
+                                <label for="password">Password</label>
+                                <input class="form-styling" type="text" name="password" placeholder="" />
+                                <label for="confirmpassword">Confirm password</label>
+                                <input class="form-styling" type="text" name="confirmpassword" placeholder="" />
+                                <a ng-click="checked = !checked" class="btn-signup">Sign Up</a>
+                            </form>
+                            <div class="success">
+                                <svg width="270" height="270" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                    viewBox="0 0 60 60" id="check" ng-class="checked ? 'checked' : ''">
+                                    <path fill="#ffffff" d="M40.61,23.03L26.67,36.97L13.495,23.788c-1.146-1.147-1.359-2.936-0.504-4.314
+                                    c3.894-6.28,11.169-10.243,19.283-9.348c9.258,1.021,16.694,8.542,17.622,17.81c1.232,12.295-8.683,22.607-20.849,22.042
+                                    c-9.9-0.46-18.128-8.344-18.972-18.218c-0.292-3.416,0.276-6.673,1.51-9.578" />
+                                    <div class="successtext">
+                                        <p> Thanks for signing up! Check your email for confirmation.</p>
+                                    </div>
+                            </div>
+                        </div>
+                        <div class="forgot">
+                            <a href="#">Forgot your password?</a>
+                        </div>
+                        <div>
+                            <div class="cover-photo"></div>
+                            <div class="profile-photo"></div>
+                            <h1 class="welcome">Welcome, Chris</h1>
+                            <a class="btn-goback" value="Refresh" onClick="history.go()">Go back</a>
+                        </div>
+                    </div>
+                    <a id="refresh" value="Refresh" onClick="history.go()">
+                        <svg class="refreshicon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            x="0px" y="0px" width="25px" height="25px" viewBox="0 0 322.447 322.447" style="enable-background:new 0 0 322.447 322.447;"
+                            xml:space="preserve">
+                            <path d="M321.832,230.327c-2.133-6.565-9.184-10.154-15.75-8.025l-16.254,5.281C299.785,206.991,305,184.347,305,161.224
+                                  c0-84.089-68.41-152.5-152.5-152.5C68.411,8.724,0,77.135,0,161.224s68.411,152.5,152.5,152.5c6.903,0,12.5-5.597,12.5-12.5
+                                  c0-6.902-5.597-12.5-12.5-12.5c-70.304,0-127.5-57.195-127.5-127.5c0-70.304,57.196-127.5,127.5-127.5
+                                  c70.305,0,127.5,57.196,127.5,127.5c0,19.372-4.371,38.337-12.723,55.568l-5.553-17.096c-2.133-6.564-9.186-10.156-15.75-8.025
+                                  c-6.566,2.134-10.16,9.186-8.027,15.751l14.74,45.368c1.715,5.283,6.615,8.642,11.885,8.642c1.279,0,2.582-0.198,3.865-0.614
+                                  l45.369-14.738C320.371,243.946,323.965,236.895,321.832,230.327z" />
+                        </svg>
+                    </a>
                 </div>
             </div>
             <div id="address" class="col l6 m6 s12">
                 <h3 style="color: #3a4d57;">
-                    <b>Queremos escuchar sobre ti</b>
+                    <b>Comienza ahora con tu canal digital de ventas</b>
                 </h3>
-                <br>
-                <h5>Polanco, CDMX</h5>
-                <br>
-                <br>
-                <h5>
-                    <b>contacto@koomkin.com</b>
-                </h5>
-                <h5>
-                    <b>(55) 5535 - 0499</b>
-                </h5>
             </div>
         </div>
     </div>
