--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -160,6 +160,10 @@ nav {
     background-image: url("../app/assets/img/like.png");
 }
 
+#inicio {
+    height: -webkit-fill-available;
+}
+
 .counter {
     color: white;
     font-weight: bold;
