--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -157,7 +157,7 @@
 
 <div id="social-div" class="parallax-container valign-wrapper">
     <div class="parallax">
-        <img class="socialBackground" src="app/assets/img/fondo.svg">
+        <img class="socialBackground" src="app/assets/img/fondo.jpg">
     </div>
     <div class="container">
         <div class="row">
